--- a/templates/index.html
+++ b/templates/index.html
@@ -58,21 +58,16 @@
     </header>
 
     <!-- Portfolio Grid Section -->
-    <section class="portfolio" id="portfolio">
+    <section class="text-center">
       <div class="container">
-        <div class="row">
-          <div class="text-center mt-4">
-            <p>Add stuff here</p>
-          </div>
+        <div class="text-center mb-0">
+          <h2 class="mb-0">Add stuff here</h2>
+          <a href="video1">Download video 1</a>
         </div>
       </div>
     </section>
 
-    <!-- About Section -->
-    <section class="bg-primary text-white mb-0" id="about">
-      <div class="container">
-        <h2 class="text-center text-uppercase text-white">What is air</h2>
-    </section>
+
 
     <!-- Footer -->
     <footer class="footer text-center">
