--- a/templates/index.html
+++ b/templates/index.html
@@ -61,8 +61,9 @@
     <section class="text-center">
       <div class="container">
         <div class="text-center mb-0">
-          <h2 class="mb-0">Add stuff here</h2>
           <a href="video1">Download video 1</a>
+          <a href="video2">Download video 1</a>
+          <a href="video3">Download video 1</a>
         </div>
       </div>
     </section>
