--- a/templates/complete.html
+++ b/templates/complete.html
@@ -61,9 +61,13 @@
     <section class="text-center">
       <div class="container">
         <div class="text-center mb-0">
-          <a href="video1">Download video 1</a><br>
-          <a href="video2">Download video 1</a><br>
-          <a href="video3">Download video 1</a>
+          <img src="/static/img/check.png" alt="">
+          <br>
+          Download complete.
+          <br>
+          Check 'client' folder for downloaded video and command line for messages.
+          <br>
+          <a href="/">Back to Index Page</a>
         </div>
       </div>
     </section>
