--- a/templates/vid.html
+++ b/templates/vid.html
@@ -61,9 +61,9 @@
     <section class="text-center">
       <div class="container">
         <div class="text-center mb-0">
-          <a href="video1">Download video 1</a><br>
-          <a href="video2">Download video 1</a><br>
-          <a href="video3">Download video 1</a>
+          <a href="video/1">Download video 1</a><br>
+          <a href="video/2">Download video 1</a><br>
+          <a href="video/3">Download video 1</a>
         </div>
       </div>
     </section>
